--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>You Bastards</title>
    <style>
-  </style>
+  </style>	
 </head>
 <body>
-<p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p>
+<h1>Welcome.</h1>
+<div><p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
 </body>
 </html>
