--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
   <title>You're not welcome.</title>
-   <style>
-  </style>	
+   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Welcome.</h1>
-<div><p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
+<div class="bastards"><p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
 </body>
 </html>
