--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
 <h1>Welcome.</h1>
 <div class="bastards"><p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
+	<div>
+		<img
+	</div>
 </body>
 </html>
