--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <h1>Welcome.</h1>
-<div class="bastards"><p>YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
+<div class="bastards">
+	<p class="bastards">YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
 	<div>
 		<img
 	</div>
