--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
   <title>You're not welcome.</title>
    <link href="style.css" rel="stylesheet" type="text/css">
+	<style>
+		#anim{max-width: 800px;margin: 0 auto;}
+	</style>
 </head>
 <body>
 <h1>Welcome.</h1>
 <div class="bastards">
 	<p class="bastards">YOU’LL <strong>NEVER</strong> CATCH ME ALIVE YOU BASTARDS!</p></div>
 	<div>
-		<img
 	</div>
+		<div id="anim"></div>
+		<script type="text/javascript" src="lottie.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+		
 </body>
 </html>
