--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<div id="anim"></div>
 		<script type="text/javascript" src="lottie.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		
+	<div><h1 id="div" onmouseover="mouseOver()" onmouseout="mouseOut()">Mouse over me</h1></div>
+	<script type="text/javascript" src="script.js"></script>
+	</head>	
 </body>
 </html>
